Loading graphic update.
Former-commit-id: dda5da6c935e15ff907c1393f6b0db207fef5d6b
Former-commit-id: e63f02ee57033f87882975d980394d330c73acad
Former-commit-id: 6cbe3c33580539818691754625f9e1099b3be7f9
Former-commit-id: 16c572e9660813f8c7876ea088184dca8316eb9e
Former-commit-id: 529d1af736d5d3b84c3bef87f0fa6a54d632db1c
Former-commit-id: 353b5333e08dbc07806f7a109861258c5eb442ac

--- a/src/podiobooks/media/themes/tim1/css/base.css
+++ b/src/podiobooks/media/themes/tim1/css/base.css
@@ -171,10 +171,10 @@ ul {
 }
 
 .pb-shelf-container .dijitContentPaneLoading {
-	background: url(../images/loading.gif) no-repeat;
-	height: 35px;
-	width: 35px;
-	margin: 62px 0 0 90px;
+	background: url(../images/loading-large.gif) no-repeat;
+	height: 49px;
+	width: 307px;
+	margin: 62px 0 0 120px auto;
 	color: transparent;
 	display: block;
 }
