--- a/src/podiobooks/templates/themes/tim1/main/title/tags/show_episodelist.html
+++ b/src/podiobooks/templates/themes/tim1/main/title/tags/show_episodelist.html
@@ -18,7 +18,7 @@
     <div style="margin-top: 15px;">
         <div style="float:left; width:160px;">
             <a href="{{ episode.url }}">{{ episode.name }}</a>
-            <div style="margin: 5px 0 0 15px; font-size: 10px">({{ episode.filesize|filesizeformat }}	MB)</div>
+            <div style="margin: 5px 0 0 15px; font-size: 10px">({{ episode.filesize|filesizeformat }})</div>
         </div>
         <div style="float:left; width:600px; margin-left: 10px;">
             {{ episode.description }}
