First pass at showing ratings.
Former-commit-id: 9a8b66d3c5037fec19b0200205c057965375e509
Former-commit-id: 25e90bf35174efedb8e7af416ef47077ad4a5bca
Former-commit-id: 6c9c616b86f48e7081277fd7135ffb8d84674bfb
Former-commit-id: 32ae1c2cc9f4987dd6861370dea285c70642a901
Former-commit-id: 8c3a0d049c79ac32f63a25a1482fbe90953ab233
Former-commit-id: 5d22cd1f94b593d0a56f974054d1f7aeeab7178f

--- a/src/podiobooks/media/themes/tim1/css/base.css
+++ b/src/podiobooks/media/themes/tim1/css/base.css
@@ -200,14 +200,12 @@ ul {
 	left: 13px;
 }
 
-.pb-shelf-item-preview-icon {
-	background: url(../images/pb-preview-icon.png) no-repeat;
+.pb-shelf-item-rating {
 	position: absolute;
 	top: 125px;
 	left: 13px;
 	height: 19px;
-	width: 63px;
-	cursor: pointer;
+	width: 90px;
 }
 
 .pb-shelf-item-text {
