--- a/src/podiobooks/templates/themes/tim1/main/index.html
+++ b/src/podiobooks/templates/themes/tim1/main/index.html
@@ -23,6 +23,6 @@
 
 {% show_shelf 'topRatedShelf' 'Top Rated Podiobooks' toprated_title_list '' '' 'pb-shelf' 3 %}
 
-{% show_infobox 'Podiobooks.com News' 'homePageInfobox' blog_feed_entries %}
+{% show_infobox 'Podiobooks.com News' 'homePageInfobox' nowreleasing_title_list recentlycomplete_title_list %}
 
 {% endblock %}
