--- a/src/podiobooks/templates/themes/tim1/main/tags/show_infobox.html
+++ b/src/podiobooks/templates/themes/tim1/main/tags/show_infobox.html
@@ -8,11 +8,20 @@
             <br>
             News
         </div>
-        <div id="rssfeed" name="rssfeed" style="line-height: 1.1; margin: -20px 0 0 0;">
+        <div id="news" name="news" style="line-height: 1.1; margin: -20px 0 0 0;">
+			<div style="margin: 5px 0 5px 0">Now Releasing:</div>
             <ul style="list-style-type: circle; margin: 0 0 0 12px; padding: 0">
-                {% for entry in update_list|slice:":8" %}
+                {% for title in nowreleasing_title_list|slice:":5" %}
                 <li style="margin: 8px 0 0 0">
-                    <a href="{{ entry.link }}">{{ entry.title }}</a>
+                    <a href="{% url title_detail title.slug %}">{{ title.name }}</a>
+                </li>
+                {% endfor %}
+            </ul>
+			<div style="margin: 10px 0 5px 0">Recently Complete:</div>
+			<ul style="list-style-type: circle; margin: 0 0 0 12px; padding: 0">
+                {% for title in recentlycomplete_title_list|slice:":4" %}
+                <li style="margin: 8px 0 0 0">
+                    <a href="{% url title_detail title.slug %}">{{ title.name }}</a>
                 </li>
                 {% endfor %}
             </ul>
