Addded Ratings bar with percentage...see what people think.
Former-commit-id: 555fb01f6dda2572ce1464fdb357d64caf766992
Former-commit-id: ad5cb4f7d1e1710740c1f666cda7f1342dd2a921
Former-commit-id: 2c76a8a5cfc17d81b1b386952bbe635b6c8eb6f1
Former-commit-id: 2609f6a01c9c37c4258f43826a1eb5a36693ca44
Former-commit-id: 5a8de876d3e7c8c4782109805d4d7cdae82076c0
Former-commit-id: b94b04414292ea749b54362632a66bbe8930fb40

--- a/src/podiobooks/templates/themes/tim1/main/title/detail_snippet.html
+++ b/src/podiobooks/templates/themes/tim1/main/title/detail_snippet.html
@@ -1,8 +1,8 @@
 {% load main_templatetags %}
 {% load title_templatetags %}
 <a href="{% url title_detail title.slug %}"><img class="pb-shelf-item-cover-image" src="{% cover_media_url %}images/covers/67x99/{{ title.cover }}" width="67" height="99" alt="Podiobook Cover for {{ title.name }}"/></a>
-<div class="pb-shelf-item-rating" style="font-size: 12px; font-weight: bold">
-	<img src="{{ THEME_MEDIA_URL}}images/pb-thumbs-up.png">{{ title.net_promoter_score }}%
+<div class="pb-shelf-item-rating">
+	{{ title.net_promoter_score }}%
 </div>
 <div class="pb-shelf-item-text">
     <p class="pb-shelf-item-title">
