--- a/src/podiobooks/media/themes/tim1/css/base.css
+++ b/src/podiobooks/media/themes/tim1/css/base.css
@@ -201,11 +201,17 @@ ul {
 }
 
 .pb-shelf-item-rating {
+	background: url('../images/pb-thumbs-up-bar.jpg') no-repeat;
 	position: absolute;
 	top: 125px;
 	left: 13px;
-	height: 19px;
-	width: 90px;
+	height: 24px;
+	width: 67px;
+	font-size: 12px;
+	font-weight: bold;
+	text-align: center;
+	padding: 5px 0 0 10px;
+	cursor: pointer;
 }
 
 .pb-shelf-item-text {
