--- a/src/podiobooks/templates/themes/tim1/main/title/search_results.html
+++ b/src/podiobooks/templates/themes/tim1/main/title/search_results.html
@@ -20,6 +20,6 @@
 </div>
 {% if result_count %}<h3 style="font-size:16px; font-weight:bold; margin: 20px 20px 20px 40px;">{{ result_count }} titles found whose name or description contained "{{ keywords }}"</h3>
 {% show_titlelist title_list %}
-{% else %}<h3 style="font-size:16px; font-weight:bold; margin: 20px 20px 400px 40px;">No titles found whose name or description contained "{{ keywords }}"</h3>
+{% else %}<h3 style="font-size:16px; font-weight:bold; margin: 20px 20px 400px 40px;">No titles found whose name, description, or contributors contained "{{ keywords }}"</h3>
 {% endif %}
 {% endblock %}
