Extended ratings to include number of ratings.
Former-commit-id: ef386a944a2105435347031281fe42f56b841f5b
Former-commit-id: 2422716e751cb1a0fb10fbfb68c71fb8ad63f0f3
Former-commit-id: 22b508c7c4ff63caa3ba403e5b47f7f1eb45e534
Former-commit-id: e3c31df41144bde6a15fe604dab28c510a4fa329
Former-commit-id: 7d7200b331429cc193873b550c4090f354196c87
Former-commit-id: 310d9390cb17a1dbfcf9547f8c7e74b38d7b7c5b

--- a/src/podiobooks/media/themes/tim1/css/base.css
+++ b/src/podiobooks/media/themes/tim1/css/base.css
@@ -201,16 +201,16 @@ ul {
 }
 
 .pb-shelf-item-rating {
-	background: url('../images/pb-thumbs-up-bar.jpg') no-repeat;
+	background: url('../images/pb-thumbs-up-bar-tall.jpg') no-repeat;
 	position: absolute;
-	top: 125px;
+	top: 112px;
 	left: 13px;
-	height: 24px;
+	height: 48px;
 	width: 67px;
 	font-size: 12px;
 	font-weight: bold;
 	text-align: center;
-	padding: 5px 0 0 10px;
+	padding: 0 0 0 10px;
 	cursor: pointer;
 }
 
