--- a/src/podiobooks/templates/themes/tim1/base.html
+++ b/src/podiobooks/templates/themes/tim1/base.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta name="language" content="english"> 
 <!--[if IE 8]>
 <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8" >
 <![endif]-->
