missing shelf_title in pane labels fixed.
Former-commit-id: 8bcbde6a8f0aee153718454537e8581eb0fb07c8
Former-commit-id: 9ca53902b8edd12690a3cdca8e96666a1d80d107
Former-commit-id: 0d8f1308ae9fb8e46554a026ac69d7bef41fa19c
Former-commit-id: 364e828867c41aa50884dbd4fcb1e948484eb12a
Former-commit-id: db6bf9439b2c1d0748d4378c55419132acf3328c
Former-commit-id: 320be37608b4d1a53cab1028ac3f4dccb13bc18e

--- a/src/podiobooks/templates/themes/tim1/main/tags/show_shelf.html
+++ b/src/podiobooks/templates/themes/tim1/main/tags/show_shelf.html
@@ -30,7 +30,7 @@
             <span class="pb-shelf-controller" dojoType="dijit.layout.StackController" containerId="{{ shelf_id }}" buttonWidget="pbwidgets.book_shelf._StackButton"></span>
         </div>
         <div dojoType="dijit.layout.ContentPane" id="{{ shelf_id }}Container" class="pb-shelf-container">
-            {% show_shelf_items shelf_id title_list shelf_title_width %}
+            {% show_shelf_items shelf_id shelf_title title_list shelf_title_width %}
         </div>
     </div>
     <div class="pb-shelf-right-arrow" onclick="dijit.byId('{{ shelf_id }}').forward();" alt="Click to Switch to the Next Page of Podiobooks.">
