Removed alt from divs to meet html validation.
Former-commit-id: 629a90e28e40009e9f7c90e8750b2c60deb7ece1
Former-commit-id: 61992d80211fc0073a25634622c610eb7768d0ce
Former-commit-id: fcfea3c4ab153f7e29caf3970aef3734e2d964db
Former-commit-id: 6bcdf91c955fc83168403972f976ee1faee3463b
Former-commit-id: e0fc152ab5262e353eed8e54b0b3a0c8f64125be
Former-commit-id: 1c61e1994093a4a6aad9e7542da12633c387a20d

--- a/src/podiobooks/templates/themes/tim1/main/tags/show_infobox.html
+++ b/src/podiobooks/templates/themes/tim1/main/tags/show_infobox.html
@@ -1,6 +1,6 @@
 <!-- Begin {{ infobox_id }} Infobox -->
 <div class="pb-infobox" id="{{ infobox_id }}">
-    <div class="pb-infobox-left" alt="">
+    <div class="pb-infobox-left">
     </div>
     <div class="pb-infobox-middle">
         <div class="pb-headphones">
@@ -27,7 +27,7 @@
             </ul>
         </div>
     </div>
-    <div class="pb-infobox-right" alt="">
+    <div class="pb-infobox-right">
     </div>
 </div>
 <div class="pb-float-clear">
