--- a/src/podiobooks/templates/themes/tim1/main/title/detail_snippet.html
+++ b/src/podiobooks/templates/themes/tim1/main/title/detail_snippet.html
@@ -2,11 +2,11 @@
 {% load title_templatetags %}
 <a href="{% url title_detail title.slug %}"><img class="pb-shelf-item-cover-image" src="{% cover_media_url %}images/covers/67x99/{{ title.cover }}" width="67" height="99" style="border: none;" alt="Podiobook Cover for {{ title.name }}"/></a>
 <div class="pb-shelf-item-rating">
-	{{ title.net_promoter_score }}%<div style="font-size: 10px; font-weight: normal; margin: -2px 0 0 -4px;">({{ title.promoter_count|add:title.detractor_count }})</div>
+	{{ title.net_promoter_score }}%<div style="font-size: 10px; font-weight: normal; margin: -2px 0 0 -4px;">of {{ title.promoter_count|add:title.detractor_count }}</div>
 </div>
 <div class="pb-shelf-item-text">
     <p class="pb-shelf-item-title">
-        <a href="{% url title_detail title.slug %}" style="text-decoration:none;">{{ title.name|truncatewords_html:4 }}</a>
+        <a href="{% url title_detail title.slug %}" style="text-decoration:none;">{{ title.name|truncatewords_html:5 }}</a>
     </p>
     <p class="pb-shelf-item-contributors">
         {% show_contributors title %}
