--- a/src/podiobooks/templates/themes/tim1/main/tags/show_shelf.html
+++ b/src/podiobooks/templates/themes/tim1/main/tags/show_shelf.html
@@ -17,16 +17,23 @@
     }
 </script>
 <div class="{{ base_css_class }}" id="{{ shelf_id }}OuterContainer">
-    <div class="pb-shelf-left-arrow" onclick="dijit.byId('{{ shelf_id }}').forward();" alt="Click to Switch to the Previous Page of Podiobooks.">
+	<div class="pb-shelf-arrow pb-shelf-left-arrow">
+    	<button dojoType="dijit.form.Button" showLabel="false" label="Click to show the previous set of books on this shelf." type="button" onclick="dijit.byId('{{ shelf_id }}').back();"></button>
     </div>
-    <div class="pb-shelf-middle">
+	<div class="pb-shelf-middle">
         <div class="pb-shelf-titlebar">
             <h2 style="float: left;">{{ shelf_title }}</h2>
 			{% if dropdown_values %}
-			<form class="pb-shelf-dropdown" action="{{ dropdown_url }}" name="{{ shelf_id }}">
+			<form class="pb-shelf-dropdown" action="{{ dropdown_url }}" name="{{ shelf_id }}" id="{{ shelf_id }}Dropdown">
 				<div style="height: 0px; width: 0px; overflow: hidden;"><label for="id_contributor">Select a Author to View Title</label></div>
 				{{ dropdown_values.contributor }}
             </form>
+			<script type="text/javascript">
+				dojo.addOnLoad ( function() {
+					var dropdownValue = dojo.byId('id_contributor').value;
+					contributorChange('{{ shelf_id }}', '{{ dropdown_url }}', dropdownValue);
+				});
+			</script>
 			{% endif %}
             <span class="pb-shelf-controller" dojoType="dijit.layout.StackController" containerId="{{ shelf_id }}" buttonWidget="pbwidgets.book_shelf._StackButton"></span>
         </div>
@@ -34,8 +41,9 @@
             {% show_shelf_items shelf_id shelf_title title_list shelf_title_width %}
         </div>
     </div>
-    <div class="pb-shelf-right-arrow" onclick="dijit.byId('{{ shelf_id }}').forward();" alt="Click to Switch to the Next Page of Podiobooks.">
-    </div>
+	<div class="pb-shelf-arrow pb-shelf-right-arrow">
+    	<button dojoType="dijit.form.Button" showLabel="false" label="Click to show the next set of books on this shelf." type="button" onclick="dijit.byId('{{ shelf_id }}').forward();"></button>
+	</div>
 </div>
 <div class="pb-float-clear">
 </div>
