--- a/src/podiobooks/templates/themes/tim1/main/title/detail.html
+++ b/src/podiobooks/templates/themes/tim1/main/title/detail.html
@@ -11,7 +11,7 @@
 			<img src="{{ THEME_MEDIA_URL }}images/pb-rss-icon.gif"><a href="/rss/feeds/episodes/{{ title.slug }}">Subscribe now</a>
 		</div>
     </div>
-    <div style="float:left; width: 750px; margin: 0px 0px 20px 20px">
+    <div style="float:left; width: 500px; margin: 0px 0px 20px 20px">
         <div style="font-size: 18px; font-weight: bold;">
             {{ title.name }}
         </div>
@@ -19,8 +19,8 @@
         <br>
         {% show_categories title %}
         <br>
-        <p style="margin: 20px 0px 0px 0px">
-            {% autoescape off %}{{ title.description }}{% endautoescape %}
+        <p style="margin: 20px 0px 0px 0px;">
+            {% autoescape off %}{{ title.description_br }}{% endautoescape %}
         </p>
         <br>
         {% if title.license %}
