Refactored tags out into multiple libraries, renamed main_ to global.
Former-commit-id: d90fae4f0a934e802e0994f8120b7e9569451891
Former-commit-id: 552fd39c5d49a4c9ffacee8fbfbc5125d4f7deaf
Former-commit-id: 0a1a4b77c11181bb8b784771942785a229a351a1
Former-commit-id: f7d864090b8da5596f90e2978feb1284fe1ac9e7
Former-commit-id: 5135c6b88dcbe7656905ac98e9eed6777add526c
Former-commit-id: 39a8f7065cf98be8a793e320368dffdcb96b7d47

--- a/src/podiobooks/templates/base/main/shelf/tags/show_shelf.html
+++ b/src/podiobooks/templates/base/main/shelf/tags/show_shelf.html
@@ -1,21 +1,6 @@
-{% load main_templatetags %}
-{% load title_templatetags %}<!-- Begin {{ shelf_title }} Shelf -->
-<script type="text/javascript">
-	// Windows Chrome Button Padding Fix
-    dojo.addOnLoad(function(){
-        if (dojo.isChrome && (navigator.appVersion.indexOf("Win") != -1)) {
-            dojo.query(".pb-shelf-controller-icon").style({
-                "margin-top": "-1px",
-                "margin-left": "-3px",
-            });
-        }
-    });
-	
-	// Updates a shelf by changing the container ContentPane's href, triggering an XHR
-    function contributorChange(shelf_id, shelf_url, dropdown_value){
-		dijit.byId(shelf_id+'Container').attr('href', shelf_url.replace('contributor_slug',dropdown_value));
-    }
-</script>
+{% load global_templatetags %}
+{% load shelf_templatetags %}
+<!-- Begin {{ shelf_title }} Shelf -->
 <div class="{{ base_css_class }}" id="{{ shelf_id }}OuterContainer">
 	<div class="pb-shelf-arrow pb-shelf-left-arrow">
     	<button dojoType="dijit.form.Button" showLabel="false" label="Click to show the previous set of books on this shelf." type="button" onclick="dijit.byId('{{ shelf_id }}').back();"></button>
