--- a/src/podiobooks/templates/themes/legacy/main/index.html
+++ b/src/podiobooks/templates/themes/legacy/main/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-{% load main_templatetags %}
-{% load title_templatetags %}
+{% load global_templatetags %}
+{% load shelf_templatetags %}
 
 {% block headtitle %}{{ site_name }} - Serialized audio books in podcast form{% endblock %}
 {% block head %}
