--- a/src/podiobooks/templates/themes/tim1/header.html
+++ b/src/podiobooks/templates/themes/tim1/header.html
@@ -1,4 +1,4 @@
-{% load main_templatetags %}<!-- Header - Logo and Navigation Bar -->
+{% load global_templatetags %}<!-- Header - Logo and Navigation Bar -->
 <div id="header">
     <div id="pb-header-background">
         <div id="pb-header-click-region" onclick="document.location.href = ('/')">
