--- a/src/podiobooks/templates/themes/tim1/main/title/detail.html
+++ b/src/podiobooks/templates/themes/tim1/main/title/detail.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load main_templatetags %}
+{% load global_templatetags %}
 {% load title_templatetags %}
 {% block headtitle %}{{ title.name }} - {{ site_name }}{% endblock %}
 {% block title %}Book Information{% endblock %}
