--- a/src/podiobooks/templates/themes/tim1/main/title/tags/show_titlecover.html
+++ b/src/podiobooks/templates/themes/tim1/main/title/tags/show_titlecover.html
@@ -1,4 +1,4 @@
-{% load main_templatetags %}
+{% load global_templatetags %}
 {% if title %}
 <div class="pb-title-cover">
 	<div class="pb-title-cover-image">
