--- a/src/podiobooks/templates/base/main/index.html
+++ b/src/podiobooks/templates/base/main/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load main_templatetags %}
+{% load global_templatetags %}
 {% load title_templatetags %}
 
 {% block headtitle %}{{ site_name }} - Serialized audio books in podcast form{% endblock %}
