--- a/src/podiobooks/templates/themes/tim1/main/contributor/shelf.html
+++ b/src/podiobooks/templates/themes/tim1/main/contributor/shelf.html
@@ -1,3 +1,3 @@
-{% load main_templatetags %}
-{% load title_templatetags %}
+{% load global_templatetags %}
+{% load shelf_templatetags %}
 {% show_shelf_items 'authorSpotlightShelf' 'Author Spotlight Shelf' contributor.title_set.all 3 %}
