--- a/src/podiobooks/templates/themes/tim1/main/title/detail_snippet.html
+++ b/src/podiobooks/templates/themes/tim1/main/title/detail_snippet.html
@@ -1,4 +1,4 @@
-{% load main_templatetags %}
+{% load global_templatetags %}
 {% load title_templatetags %}
 <a href="{% url title_detail title.slug %}"><img class="pb-shelf-item-cover-image" src="{% cover_media_url %}images/covers/67x99/{{ title.cover }}" width="67" height="99" style="border: none;" alt="Podiobook Cover for {{ title.name }}"/></a>
 <div class="pb-shelf-item-rating">
