fixed name of search form.
Former-commit-id: 0cdf42d6fb0bbf02b468863dbad40e705fb1440e
Former-commit-id: 1a90fca839f86e1d9b4051f7d27edc7b1728871b
Former-commit-id: 4c900ece02cddb2cfc01f0b3ce04804f5e3861da
Former-commit-id: 2def4affd9bcbe1505b73c3fdfd6d3e093004f10
Former-commit-id: e470a12c408c008e244970150996d2be84b640a5
Former-commit-id: ab720832e568b86d160bc70d3214575886871e3a

--- a/src/podiobooks/templates/themes/tim1/main/tags/show_searchbox.html
+++ b/src/podiobooks/templates/themes/tim1/main/tags/show_searchbox.html
@@ -3,7 +3,7 @@
         <label for="id_keywords" style="font-weight:bold;">
             Search for
         </label>
-        {{ titleQuickSearchForm.keywords }}
+        {{ titleSearchForm.keywords }}
     </form>
     <form action="{% url category_redirect %}" method="POST" style="display:inline;" id="pb-category-choice-form">
         <label for="id_category" style="font-weight:bold;">
