--- a/src/podiobooks/templates/themes/tim1/main/index.html
+++ b/src/podiobooks/templates/themes/tim1/main/index.html
@@ -24,4 +24,6 @@
 
 {% show_infobox 'Podiobooks.com News' 'homePageInfobox' nowreleasing_title_list recentlycomplete_title_list %}
 
+{% include "debug.html" %}
+
 {% endblock %}
