back to fixed height for top tabs.
Former-commit-id: a87736afd25ce46fd773ff50f928d1d452ef33a4
Former-commit-id: b55399b001450dfff9d699224c21a6745942f9da
Former-commit-id: 1b20960e2e575c068225d201ed52855a76e0aa2c
Former-commit-id: 9290d61f05b0a80555690581258ca99b89cbb1d4
Former-commit-id: c6375f63eb1bb974e8cc875a10df9af9c9634f82
Former-commit-id: 72a00721f76fa0ce055e41b2bfb1b6a02ac579d0

--- a/src/podiobooks/templates/themes/tim1/main/title/detail.html
+++ b/src/podiobooks/templates/themes/tim1/main/title/detail.html
@@ -26,8 +26,8 @@
         {% show_contributors title %}
         <br>
         {% show_categories title %}
-        <div class="tundra" style="opacity: 0; margin: 5px 0 0 0;" id="topTabs">
-        	<div dojoType="dijit.layout.TabContainer" style="width: 100%; height: 100%;" doLayout="false">
+        <div class="tundra" style="opacity: 0; margin: 5px 0 0 0; height: 250px;" id="topTabs">
+        	<div dojoType="dijit.layout.TabContainer" style="width: 100%; height: 100%;">
         		<div dojoType="dijit.layout.ContentPane" title="Description" selected="true">
             		{% autoescape off %}{{ title.description_br }}{% endautoescape %}
 				</div>
