Set detail page up to use libsyn for covers, tweaked styling for snippet images.
Former-commit-id: 740f285fce0d90ed12e6e3de4660276bc0aaa37b
Former-commit-id: 56d33aa2bcf59c0f1deae762a33fc3b8ca5c9dda
Former-commit-id: 72d64429e9a13bd0f50d8a2298c1df67d605e9e5
Former-commit-id: e32018157fd23081e75c9e41f2b9e5fb3da2bb61
Former-commit-id: a809708f6d8f227b8c0c243df826bbb15851d6ef
Former-commit-id: 3c7a7c41d7244a0c4577bda86d63850ba915832d

--- a/src/podiobooks/templates/themes/tim1/main/title/detail_snippet.html
+++ b/src/podiobooks/templates/themes/tim1/main/title/detail_snippet.html
@@ -2,9 +2,9 @@
 {% load title_templatetags %}
 <a href="{% url title_detail title.slug %}">
 	{% if title.libsyn_show_id %}
-	<img class="pb-shelf-item-cover-image" src="http://images.libsyn.com/show/{{ title.libsyn_show_id }}/height/99/width/67" width="67" height="99" style="border: none;" alt="Podiobook Cover for {{ title.name }}"/></a>
+	<img class="pb-shelf-item-cover-image" src="http://images.libsyn.com/show/{{ title.libsyn_show_id }}/height/99/width/67" width="67" height="99" alt="Podiobook Cover for {{ title.name }}"/></a>
 {% else %}
-	<img class="pb-shelf-item-cover-image" src="{% cover_media_url %}images/covers/67x99/{{ title.cover }}" width="67" height="99" style="border: none;" alt="Podiobook Cover for {{ title.name }}"/></a>
+	<img class="pb-shelf-item-cover-image" src="{% cover_media_url %}images/covers/67x99/{{ title.cover }}" width="67" height="99" alt="Podiobook Cover for {{ title.name }}"/></a>
 	{% endif %}
 <div class="pb-shelf-item-rating">
 	{{ title.net_promoter_score }}%<div style="font-size: 10px; font-weight: normal; margin: -2px 0 0 -4px;">of {{ title.promoter_count|add:title.detractor_count }}</div>
