Split out social/twitter.
Former-commit-id: bd0d0e5a681553f6c827b1133e981e4bb074da8e
Former-commit-id: 86938e95ea64d53c577cc729e669c637441dd5c4
Former-commit-id: 776e02ff5ac92c2f476f644b330945ed5652be84
Former-commit-id: 23b993b5ba0962352b37ec3e1a0f5cfdaa1c6587
Former-commit-id: a106ad83b9d7adfb6f26235238d528a1809f0e8a
Former-commit-id: f1015cde3eeef628ffb03fc57115ee85eec407c6

--- a/src/podiobooks/media/themes/tim1/css/base.css
+++ b/src/podiobooks/media/themes/tim1/css/base.css
@@ -356,3 +356,14 @@ ul {
 	background: #fff;
 	border: 1px solid #0054a6;
 }
+
+.pb-title-complete-notice {
+	font-size: 10px;
+}
+
+.pb-title-complete-notice-indicator {
+	color: green;
+	font-weight: bold;
+}
+}
+}
