--- a/src/podiobooks/templates/themes/tim1/main/title/detail.html
+++ b/src/podiobooks/templates/themes/tim1/main/title/detail.html
@@ -7,45 +7,58 @@
 <script type="text/javascript">
     dojo.require('dijit.layout.TabContainer');
     dojo.require('dijit.layout.ContentPane');
-	dojo.addOnLoad(function() {
-		dojo.style("bottomTabs", "opacity", "1");
-		dojo.style("topTabs", "opacity", "1");
-	});
+    dojo.addOnLoad(function(){
+        dojo.style("bottomTabs", "opacity", "1");
+        dojo.style("topTabs", "opacity", "1");
+    });
 </script>
 {% endblock %}
 {% block title %}Book Information{% endblock %}
 {% block content %}
 <div class="title-detail" style="margin: 0 0 30px 0;">
-    <div style="float:left;font-size: 10px; text-align: center">
+    <div style="float:left; text-align: center;">
         {% show_titlecover title %}
-    </div>
-    <div style="float:left; width: 500px; margin: 0px 0px 20px 20px" class="tundra">
-        <div style="font-size: 18px; font-weight: bold;">
-            {{ title.name }}
-        </div>
-        {% show_contributors title %}
-        <br>
-        {% show_categories title %}
-        <div class="tundra" style="opacity: 0; margin: 5px 0 0 0; height: 250px;" id="topTabs">
-        	<div dojoType="dijit.layout.TabContainer" style="width: 100%; height: 100%;">
-        		<div dojoType="dijit.layout.ContentPane" title="Description" selected="true">
-            		{% autoescape off %}{{ title.description_br }}{% endautoescape %}
-				</div>
-				<div dojoType="dijit.layout.ContentPane" title="News" selected="true">
-            		Lorem News
-				</div>
-				<div dojoType="dijit.layout.ContentPane" title="Comments" selected="true">
-            		Lorem Comments
-				</div>
-				<div dojoType="dijit.layout.ContentPane" title="Social" selected="true">
-            		Lorem Social
-				</div>
+        <div style="margin: 20px 0 0 20px;">
+            <div style="float: left;">
+                <img src="{{ THEME_MEDIA_URL }}images/pb-thumbs-up.png">
+            </div>
+            <div style="float: left; margin: 2px 0 0 5px">
+                {{ title.promoter_count }}
+            </div>
+			<div style="float: left; margin: 0 0 0 25px;">
+            	<img src="{{ THEME_MEDIA_URL }}images/pb-thumbs-down.png">
 			</div>
-        
+			<div style="float: left; margin: 2px 0 0 5px;">
+				{{ title.detractor_count }}
+			</div>
         </div>
     </div>
 </div>
-<div style="margin: 10px 0 25px 0; font-size: 20px; float: left; text-align: center; width: 250px;">
+<div style="float:left; width: 600px; margin: 0px 0px 20px 20px" class="tundra">
+    <div style="font-size: 18px; font-weight: bold;">
+        {{ title.name }}
+    </div>
+    {% show_contributors title %}
+    <br>
+    {% show_categories title %}
+    <div class="tundra" style="opacity: 0; margin: 5px 0 0 0; height: 250px;" id="topTabs">
+        <div dojoType="dijit.layout.TabContainer" style="width: 100%; height: 100%;">
+            <div dojoType="dijit.layout.ContentPane" title="Description" selected="true">
+                {% autoescape off %}{{ title.description_br }}{% endautoescape %}
+            </div>
+            <div dojoType="dijit.layout.ContentPane" title="News" selected="true">
+                Lorem News
+            </div>
+            <div dojoType="dijit.layout.ContentPane" title="Comments" selected="true">
+                Lorem Comments
+            </div>
+            <div dojoType="dijit.layout.ContentPane" title="Social" selected="true" href="/social/twitter/search/podiobooks">
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+<div style="margin: 10px 0 25px 0; font-size: 20px; float: left; text-align: center; width: 200px;">
     <img src="{{ THEME_MEDIA_URL }}images/pb-rss-icon.gif">
     <br/>
     <a href="/rss/feeds/episodes/{{ title.slug }}">Subscribe now</a>
@@ -56,27 +69,27 @@
     <div dojoType="dijit.layout.TabContainer" style="width: 100%; height: 100%;">
         <div dojoType="dijit.layout.ContentPane" title="Chapters">
             {% if title.episode_set.all %}
-				{% show_episodelist title %}
-			{% else %}
-				<div style="font-size: 18px; clear: both; font-weight: bold;">
-				    No Episodes Are Available Yet
-				</div>
-			{% endif %}
+            {% show_episodelist title %}
+            {% else %}
+            <div style="font-size: 18px; clear: both; font-weight: bold;">
+                No Episodes Are Available Yet
+            </div>
+            {% endif %}
         </div>
-		<div dojoType="dijit.layout.ContentPane" title="Extras">
+        <div dojoType="dijit.layout.ContentPane" title="Extras">
             Lorem ipsum and all around - extras...
         </div>
     </div>
 </div>
-
 {% if title.license %}
-	<div style="float: left; margin: 20px 0px 0px 0px;">
-	    <a rel="license" href="{{title.license.url}}"><img alt="{{ title.license.text }} Logo" style="border-width:0" src="{{title.license.image_url}}" /></a>
-	</div>
-	<div style="float: left; margin: 26px 0px 10px 10px;">
-	    This work is licensed under a <a href="{{title.license.url}}">{{ title.license.text }}</a>
-	    license.
-	</div>
-	<div style="clear: both"></div>
+<div style="float: left; margin: 20px 0px 0px 0px;">
+    <a rel="license" href="{{title.license.url}}"><img alt="{{ title.license.text }} Logo" style="border-width:0" src="{{title.license.image_url}}" /></a>
+</div>
+<div style="float: left; margin: 26px 0px 10px 10px;">
+    This work is licensed under a <a href="{{title.license.url}}">{{ title.license.text }}</a>
+    license.
+</div>
+<div style="clear: both">
+</div>
 {% endif %}
 {% endblock %}
