--- a/src/podiobooks/templates/themes/tim1/main/title/tags/show_titlecover.html
+++ b/src/podiobooks/templates/themes/tim1/main/title/tags/show_titlecover.html
@@ -4,7 +4,7 @@
 	<div class="pb-title-cover-image">
 		<a href="{{ title.get_absolute_url }}">
 			{% if title.libsyn_show_id %}
-				<img class="pb-title-cover-image" src="http://images.libsyn.com/show/{{ title.libsyn_show_id }}/height/212/width/144" width="144" height="212" alt="Podiobook Cover for {{ title.name }}"/></a>
+				<img class="pb-title-cover-image" src="http://images.libsyn.com/show/{{ title.libsyn_show_id }}/height/212/width/144" width="144" height="212" alt="Podiobook Cover for {{ title.name }}"/>
 			{% else %}
 				<img class="pb-title-cover-image" src="http://podiobooks.com/images/covers/{{ title.cover }}" alt="Podiobook Cover for '{{ title.name }}'" width="144" height="212"/>
 			{% endif %}
