--- a/src/podiobooks/templates/themes/tim1/main/title/detail.html
+++ b/src/podiobooks/templates/themes/tim1/main/title/detail.html
@@ -10,6 +10,7 @@
     dojo.addOnLoad(function(){
         dojo.style("bottomTabs", "opacity", "1");
         dojo.style("topTabs", "opacity", "1");
+        //dijit.byId('topTabContainer').selectChild('Description');  //Seems to be broken
     });
 </script>
 {% endblock %}
@@ -25,12 +26,12 @@
             <div style="float: left; margin: 2px 0 0 5px">
                 {{ title.promoter_count }}
             </div>
-			<div style="float: left; margin: 0 0 0 25px;">
-            	<img src="{{ THEME_MEDIA_URL }}images/pb-thumbs-down.png">
-			</div>
-			<div style="float: left; margin: 2px 0 0 5px;">
-				{{ title.detractor_count }}
-			</div>
+            <div style="float: left; margin: 0 0 0 25px;">
+                <img src="{{ THEME_MEDIA_URL }}images/pb-thumbs-down.png">
+            </div>
+            <div style="float: left; margin: 2px 0 0 5px;">
+                {{ title.detractor_count }}
+            </div>
         </div>
     </div>
 </div>
@@ -42,7 +43,7 @@
     <br>
     {% show_categories title %}
     <div class="tundra" style="opacity: 0; margin: 5px 0 0 0; height: 250px;" id="topTabs">
-        <div dojoType="dijit.layout.TabContainer" style="width: 100%; height: 100%;">
+        <div dojoType="dijit.layout.TabContainer" style="width: 100%; height: 100%;" id="topTabContainer">
             <div dojoType="dijit.layout.ContentPane" title="Description" selected="true">
                 {% autoescape off %}{{ title.description_br }}{% endautoescape %}
             </div>
@@ -52,11 +53,10 @@
             <div dojoType="dijit.layout.ContentPane" title="Comments" selected="true">
                 Lorem Comments
             </div>
-            <div dojoType="dijit.layout.ContentPane" title="Social" selected="true" href="/social/twitter/search/podiobooks">
+            <div dojoType="dijit.layout.ContentPane" title="Social" selected="true" href="/social/twitter/search/{{ title.contributors.all|first }}">
             </div>
         </div>
     </div>
-</div>
 </div>
 <div style="margin: 10px 0 25px 0; font-size: 20px; float: left; text-align: center; width: 200px;">
     <img src="{{ THEME_MEDIA_URL }}images/pb-rss-icon.gif">
@@ -66,7 +66,7 @@
 <div style="clear:both">
 </div>
 <div class="tundra" style="width: 100%; height: 500px; opacity: 0" id="bottomTabs">
-    <div dojoType="dijit.layout.TabContainer" style="width: 100%; height: 100%;">
+    <div dojoType="dijit.layout.TabContainer" style="width: 100%; height: 100%;" id="bottomTabContainer">
         <div dojoType="dijit.layout.ContentPane" title="Chapters">
             {% if title.episode_set.all %}
             {% show_episodelist title %}
