Removed border on cover.
Former-commit-id: 61bd5b76c21265ff3f90b1c106f946bdfced1f67
Former-commit-id: 6b83c89ef2207552ea26d1fbb99625430ace9e7a
Former-commit-id: 1a46b9b0298a477422dafbc88f26cb2e53e462ce
Former-commit-id: 53b1da55ed6f71e49b3e1eac4285bb4c12248d20
Former-commit-id: 89343c9b7153517de2a4d45359244f172639465d
Former-commit-id: 9a218f4a5ec871aab3fd88ca12122c95675f0077

--- a/src/podiobooks/templates/themes/tim1/main/title/tags/show_titlecover.html
+++ b/src/podiobooks/templates/themes/tim1/main/title/tags/show_titlecover.html
@@ -2,7 +2,7 @@
 {% if title %}
 <div class="pb-title-cover">
 	<div class="pb-title-cover-image">
-		<a href="{{ title.get_absolute_url }}">
+		<a href="{{ title.get_absolute_url }}" border=0>
 			{% if title.libsyn_show_id %}
 				<img class="pb-title-cover-image" src="http://images.libsyn.com/show/{{ title.libsyn_show_id }}/height/212/width/144" width="144" height="212" alt="Podiobook Cover for {{ title.name }}"/>
 			{% else %}
