Added class for detail page cover.
Former-commit-id: 1e00ce5ab3936fe2a7cff23c8e8eb300a1638d43
Former-commit-id: 96c86c72a0044df5588164532c69c64e08b7247d
Former-commit-id: 71fa939f73e794a8c72dd5bc787232ba8aec3a00
Former-commit-id: 179480f30d5adbcf4e969693f38ead3ba9c218eb
Former-commit-id: 232ad9c617f9fe09b401acd2f117a658d0fd0fe4
Former-commit-id: b94dc709520cb851a5b15b59fe68ea645b760a1b

--- a/src/podiobooks/media/themes/tim1/css/base.css
+++ b/src/podiobooks/media/themes/tim1/css/base.css
@@ -214,8 +214,6 @@ ul {
 	position: absolute;
 	top: 13px;
 	left: 13px;
-
-.pb-shelf-item-cover-image a {
 	border: none;
 }
 
@@ -367,5 +365,7 @@ ul {
 	color: green;
 	font-weight: bold;
 }
-}
+
+.pb-title-cover-image a {
+	border: none;
 }
