Split out CSS by page/module.  Couldn't take the monolithic file anymore. :)
Former-commit-id: ef5f28d2e62555b6abb495085b640c961d8cbc69
Former-commit-id: 454556354475f5b3cab055e2f3bc1df99183266c
Former-commit-id: f33e072f134876f984c1a52fd57b5dedf64dbb2c
Former-commit-id: c8845d2ced1fac6886d9ea062179dfb81f7a8455
Former-commit-id: 8500048352f9be5b2496af46bed6ef41a769e43a
Former-commit-id: e2d0aae934432513b3260bebc08dec313f716221

--- a/src/podiobooks/templates/themes/tim1/main/index.html
+++ b/src/podiobooks/templates/themes/tim1/main/index.html
@@ -7,6 +7,8 @@
 
 {% block head %}
 
+<link rel="stylesheet" type="text/css" href="{{ THEME_MEDIA_URL }}css/infobox.css" >
+
 {% shelf_includes %}
 
 {% endblock %}
