--- a/src/podiobooks/templates/themes/tim1/main/shelf/tags/show_infobox.html
+++ b/src/podiobooks/templates/themes/tim1/main/shelf/tags/show_infobox.html
@@ -3,7 +3,7 @@
     <div class="pb-infobox-left">
     </div>
     <div class="pb-infobox-middle">
-        <div class="pb-headphones">
+        <div class="pb-infobox-headphones">
             Podiobooks
             <br>
             News
