--- a/src/podiobooks/templates/themes/tim1/main/shelf/tags/shelf_includes.html
+++ b/src/podiobooks/templates/themes/tim1/main/shelf/tags/shelf_includes.html
@@ -1,4 +1,5 @@
 <!-- Begin Shelf Includes -->
+<link rel="stylesheet" type="text/css" href="{{ THEME_MEDIA_URL }}css/shelf.css" >
 <script type="text/javascript">
     dojo.require("pbwidgets.book_shelf.BookShelf");
 	dojo.require("dijit.layout.StackController");
