Added filter status messages to search results.
Former-commit-id: bfdd9e7c1c13011b6271d49e1752b357342dd02b
Former-commit-id: b3a5c9e9eabe3c96993611b5fc8cd0893d577834
Former-commit-id: 1cef273735a1f17c0cf65b2f230ae9357d24d592
Former-commit-id: 818584d04092df91578c489120c1effc926616ec
Former-commit-id: 0f815d0f30eb76ab3f89f23d032851d24322087a
Former-commit-id: 3dbf43917df4590f11265ae692e429c88621dbce

--- a/src/podiobooks/media/themes/tim1/css/base.css
+++ b/src/podiobooks/media/themes/tim1/css/base.css
@@ -28,6 +28,13 @@ h2 {
 	margin: 0;
 }
 
+h4 {
+	font-size: 12px;
+	font-weight: normal;
+	font-style: italic;
+	margin: 0 0 0 40px;
+}
+
 p {
 	margin: 0;
 }
