redid search urls to make more sense, and not show a goofy empty search page.

--- a/src/podiobooks/templates/themes/tim1/main/tags/show_searchbox.html
+++ b/src/podiobooks/templates/themes/tim1/main/tags/show_searchbox.html
@@ -1,5 +1,5 @@
 <div id="menuBarSearchform" style="display:inline;float:right;">
-    <form action="{% url title_search_redirect %}" method="POST" style="display:inline;">
+    <form action="{% url title_search %}" method="POST" style="display:inline;">
         <label for="id_keywords" style="font-weight:bold;">
             Search for
         </label>
