--- a/src/podiobooks/templates/themes/tim1/main/title/search_results.html
+++ b/src/podiobooks/templates/themes/tim1/main/title/search_results.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div id="searchPageTopBlock" style="width:100%; margin: 15px 15px 15px 30px">
     <div id="searchForm" style="float:left; width:50%;">
-        <form action="{% url title_search_redirect %}" method="POST">
+        <form action="{% url title_search %}" method="POST">
             <div id="searchFields" style="float: left; line-height: 1.5">
                 {{ titleSearchForm.as_p }}
             </div>
