More search results tweaks to make it more robust with bad data.
Former-commit-id: e6494fa2f315ca9efbf474e19ab943b048c365d5
Former-commit-id: 3022e71f9488784574d89d96f49065bbfad526c6
Former-commit-id: ce093744614d063e389a1f448ac3f167c25fc898
Former-commit-id: fd9d399f19ddc7592d74d97a19f1f621d5eef5bd
Former-commit-id: eca19bbf91c0663fee44aea17a195fdd1402966b
Former-commit-id: b37814d07bf8ea21898bbf15baea748a8c207e0e

--- a/src/podiobooks/templates/base/main/title/search_form.html
+++ b/src/podiobooks/templates/base/main/title/search_form.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div id="books">
 <div id="searchform">
-<form action="{% url title_search_redirect %}" method="POST">
+<form action="{% url title_search %}" method="POST">
 {{ titleSearchForm }}<input type="submit" value="Search" class="formbutton"/> 
 </form>
 </div>
