--- a/src/podiobooks/media/themes/tim1/css/base.css
+++ b/src/podiobooks/media/themes/tim1/css/base.css
@@ -28,6 +28,12 @@ h2 {
 	margin: 0;
 }
 
+h3 {
+	font-size:16px;
+	font-weight:bold;
+	margin: 20px 20px 20px 40px;
+}
+
 h4 {
 	font-size: 12px;
 	font-weight: normal;
