--- a/src/podiobooks/templates/themes/legacy/main/title/search_form.html
+++ b/src/podiobooks/templates/themes/legacy/main/title/search_form.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div id="books">
 <div id="searchform">
-<form action="{% url title_search_redirect %}" method="POST">
+<form action="{% url title_search %}" method="POST">
 {{ titleSearchForm }}<input type="submit" value="Search" class="formbutton"/> 
 </form>
 </div>
